Fix title not rendering in OBS. Fix word wrap/break behavior. Make "body" textareas autoresize.

--- a/dashboard/overlay.less
+++ b/dashboard/overlay.less
@@ -1,6 +1,7 @@
 .toth3-overlay {
     textarea {
         height: 3em;
+        resize: none;
     }
 
     h4 {
